[project]
name = "project1_kizelbashev_alexander_m25-555"
version = "0.1.0"
description = "Homework 1 Python"
authors = [
    {name = "javendorg",email = "javendorg777@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__", "constants.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
[dependency-groups]
dev = [
    "ruff (>=0.14.3,<0.15.0)"
]
